feat: add project & card project component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   --beige-orange : #FCD946;
   --white-platinium : #DDE2E4;
   --white-pure : #ffffff;
+  --grey-davy : #535A64;
   --red : #E55139;
   --title-size : 4em;
   --black-nuance : #161616;
