--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
   --white-platinium : #DDE2E4;
   --white-pure : #ffffff;
   --grey-davy : #535A64;
+  --blue-coin : #181E29;
   --red : #E55139;
   --title-size : 4em;
   --black-nuance : #161616;
