--- a/src/components/works/works.module.css
+++ b/src/components/works/works.module.css
@@ -1,57 +1,58 @@
 .section {
-    width : 90vw;
-    margin: 10vh auto;
-    position: relative;
-    padding: 1em;
-    background-color: var(--grey-davy);
+    width : 70vw;
+    margin: auto;
+    background-color: var(--grey-davy );
     border-radius: 30px;
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-
-    @media screen and (min-width: 1281px) {
-        width : 70vw;
-        padding: 2em;
+    padding: 2em;
+   @media screen and (max-width: 568px){
+       width: 90vw;
+       padding : 0.5em;
+   }
+    @media screen and (min-width: 568px) and (max-width: 1024px){
+        width: 90vw;
+        padding : 1em;
+    }
+    @media screen and (min-width: 1024px) and (max-width: 1280px){
+        width: 80vw;
+        padding : 1em;
     }
 
 }
 
 .sectionProject {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 2em;
     justify-content: center;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (max-width: 568px) {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
+
     }
-    @media screen and (min-width: 1024px) and (max-width: 1280px) {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 0;
-    }
+
 
 }
 
 .h2 {
     text-align: left;
-    font-size: 3em;
+    font-size: 3.5em;
     color: var(--white-platinium);
     padding-bottom: 1em;
     border-bottom: 2px solid var(--white-platinium);
     font-family: var(--title-font2), sans-serif;
     margin-bottom: 1em;
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 375px)  {
         letter-spacing: 0.1em;
-        font-size: var(--title-size);
-
+        padding-bottom: 0.5em;
+        text-align: center;
+        font-size: 2em;
+    }
+    @media screen and (min-width: 375px) and (max-width: 568px) {
+        letter-spacing: 0.1em;
+        padding-bottom: 0.5em;
+        text-align: center;
+        font-size: 3em;
     }
 }
 
-.link {
-    position: absolute;
-    right: 3vw;
-    top: 3vh;
-
-}
