--- a/src/components/cost/cost.module.css
+++ b/src/components/cost/cost.module.css
@@ -25,7 +25,7 @@
 .h2{
     font-family: var(--title-font2), sans-serif;
     padding : 1em;
-
+    background-color: var(--black-nuance);
     font-size: 2em;
 }
 
@@ -34,6 +34,7 @@
 .article{
     display: flex;
     align-items: flex-end;
+
 }
 
 .article:nth-child(2) .ul li:last-child {
@@ -43,6 +44,7 @@
 
 .ul {
     list-style: none;
+    background-color: var(--black-nuance);
 }
 
 
