--- a/src/components/cardProject/cardProject.module.css
+++ b/src/components/cardProject/cardProject.module.css
@@ -17,7 +17,7 @@
     }
     @media screen and (min-width: 568px) and (max-width: 1024px){
 
-
+        width: 40vw;
     }
     @media screen and (min-width: 1024px) and (max-width: 1280px){
         width: 24vw;
