--- a/src/components/cost/cost.module.css
+++ b/src/components/cost/cost.module.css
@@ -13,6 +13,24 @@
     text-align: center;
     color : var(--white-platinium);
     justify-content: center;
+    @media screen and (max-width: 568px)  {
+        display: flex;
+        flex-direction: column;
+        width: 90vw;
+        gap : 2em
+    }
+    @media screen and (min-width: 568px) and (max-width: 1024px)  {
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        gap : 2em
+    }
+    @media screen and (min-width: 1024px) and (max-width: 1280px)  {
+
+        width: 90vw;
+
+    }
+
 }
 
 .h1 {
@@ -20,6 +38,23 @@
     font-family: var(--title-font2), sans-serif;
     color : var(--white-platinium);
     font-size: 6em;
+    @media screen and (max-width: 375px)  {
+        letter-spacing: 0.1em;
+        padding-bottom: 0.5em;
+        text-align: center;
+        font-size: 2.5em;
+    }
+    @media screen and (min-width: 375px) and (max-width: 568px) {
+        letter-spacing: 0.1em;
+        padding-bottom: 0.5em;
+        text-align: center;
+        font-size: 3em;
+    }
+    @media screen and (min-width: 568px) and (max-width: 1024px) {
+        letter-spacing: 0.1em;
+        text-align: center;
+        font-size: 5em;
+    }
 }
 
 .h2{
@@ -27,6 +62,13 @@
     padding : 1em;
     background-color: var(--black-nuance);
     font-size: 2em;
+    @media screen and (max-width: 375px)  {
+        font-size: 1.8em;
+    }
+    @media screen and (min-width: 1024px) and (max-width: 1280px)  {
+        font-size: 1.5em;
+
+    }
 }
 
 
@@ -35,16 +77,27 @@
     display: flex;
     align-items: flex-end;
 
+
 }
 
 .article:nth-child(2) .ul li:last-child {
     height: 12vh;
+    @media screen  and (max-width: 1024px) {
+        height: fit-content;
+    }
+
+    @media screen and (min-width: 1024px) and (max-width: 1280px)  {
+        height: 15vh;
+    }
 }
 
 
 .ul {
     list-style: none;
     background-color: var(--black-nuance);
+    @media screen and (min-width: 568px) and (max-width: 1024px)  {
+        font-size: 1.2em;
+    }
 }
 
 
@@ -58,7 +111,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    @media screen and (min-width: 1024px) and (max-width: 1280px)  {
+        width: 30vw;
+        height: 7vh;
+    }
 }
 
 .ul li:last-child {
@@ -71,6 +127,10 @@
     border-bottom: solid 2px var(--beige-orange);
     border-top-width: 10px;
     border-top-left-radius: 10px;
+    @media screen and (max-width: 1024px)  {
+        border-right: solid 2px var(--beige-orange);
+        border-top-right-radius: 10px;
+    }
 }
 
 .sectionPrice .article:nth-child(2) div {
@@ -86,6 +146,10 @@
     border-bottom: solid 2px var(--beige-orange);
     border-top-width: 10px;
     border-top-right-radius: 10px;
+    @media screen and (max-width: 1024px)  {
+        border-left: solid 2px var(--beige-orange);
+        border-top-left-radius: 10px;
+    }
 }
 
 
@@ -93,4 +157,17 @@
     font-weight: bolder;
     color: var(--beige-orange);
     width: 25vw;
+    @media screen and (max-width: 568px)  {
+        width: 90vw;
+    }
+    @media screen and (min-width: 568px) and (max-width: 1024px)  {
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        gap : 2em
+    }
+    @media screen and (min-width: 1024px) and (max-width: 1280px)  {
+        width: 30vw;
+
+    }
 }
