--- a/src/components/cardProject/cardProject.module.css
+++ b/src/components/cardProject/cardProject.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width : fit-content;
     margin : auto;
-    min-height: 75vh;
+    min-height: 70vh;
     cursor:pointer;
     text-decoration: none;
 
@@ -12,6 +12,8 @@
     position: relative;
     width: 20vw;
     height: 50vh;
+    overflow: hidden;
+    border-radius: 30px;
     @media screen and (max-width: 568px){
         width: 80vw;
     }
@@ -30,6 +32,12 @@
 .image {
     object-fit: cover;
     border-radius: 30px;
+    transition: transform 0.7s ease-in-out;
+}
+
+.image:hover {
+
+    transform: scale(1.1);
 }
 
 .sectionLink{
