--- a/src/components/works/works.module.css
+++ b/src/components/works/works.module.css
@@ -1,8 +1,8 @@
 .section {
     width : 70vw;
     margin: auto;
-    background-color: var(--grey-davy );
-    border-radius: 30px;
+    background-color: var(--black-nuance );
+    border-radius: 10px;
     padding: 2em;
    @media screen and (max-width: 568px){
        width: 90vw;
@@ -23,25 +23,21 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
-    justify-content: center;
 
     @media screen and (max-width: 568px) {
         display: flex;
         flex-direction: column;
-
     }
-
-
 }
 
 .h2 {
     text-align: left;
     font-size: 6em;
     color: var(--white-platinium);
-    padding-bottom: 1em;
+    padding-bottom: 0.2em;
     border-bottom: 2px solid var(--white-platinium);
     font-family: var(--title-font2), sans-serif;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
     @media screen and (max-width: 375px)  {
         letter-spacing: 0.1em;
         padding-bottom: 0.5em;
