--- a/src/components/works/works.module.css
+++ b/src/components/works/works.module.css
@@ -5,11 +5,11 @@
     border-radius: 10px;
     padding: 2em;
    @media screen and (max-width: 568px){
-       width: 90vw;
+       width: 95vw;
        padding : 0.5em;
    }
     @media screen and (min-width: 568px) and (max-width: 1024px){
-        width: 90vw;
+        width: 95vw;
         padding : 1em;
     }
     @media screen and (min-width: 1024px) and (max-width: 1280px){
@@ -27,6 +27,10 @@
     @media screen and (max-width: 568px) {
         display: flex;
         flex-direction: column;
+    }
+    @media screen and (min-width: 568px) and (max-width: 1024px){
+        gap: 1em;
+
     }
 }
 
