--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -18,14 +18,19 @@
 }
 
 
-.h3{
+.h1{
     color : var(--white-platinium);
     font-size : 6em;
     font-family : var(--title-font2), sans-serif;
     display: flex;
     flex-direction: column;
 
-    @media screen and (max-width: 568px){
+    @media screen and (max-width: 375px){
+        font-size : 3em;
+        text-align: center;
+    }
+
+    @media screen and (min-width: 375px) and (max-width: 568px){
         font-size : 3.5em;
         text-align: center;
     }
@@ -35,18 +40,25 @@
     }
 }
 
-
-.video {
-    width: fit-content;
-    height: 55vh;
+.videoWrapper{
+    position: relative;
+    width: 45vw;
+    height: 50vh;
     border-radius: 20px;
-    @media screen and (max-width: 568px){
-        height: fit-content;
+
+    @media screen and  (max-width: 568px){
         width: 90vw;
+        height: 32vh;
     }
     @media screen and (min-width: 568px) and (max-width: 1024px){
-       height: fit-content;
-        width: 80vw;
-
+        width: 85vw;
+        height: 42vh;
     }
+}
+
+.video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
 }
