--- a/src/components/layout/navBar/navBar.module.css
+++ b/src/components/layout/navBar/navBar.module.css
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    @media screen and (max-width: 568px) {
+    @media screen and (max-width: 1024px) {
         justify-content: space-between;
         max-width : 100vw;
         padding : 0 5vw
@@ -104,6 +104,7 @@
     @media screen and (max-width: 568px) {
         display: flex;
         transform : translateY(0);
+        overflow: hidden;
     }
 
 }
