--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -4,6 +4,20 @@
     padding-top: 4em;
     overflow-x: hidden ;
     min-height: 99vh;
+    @media screen and (max-width: 375px) {
+        margin-top: -24vh;
+
+    }
+    @media screen and (min-width: 375px) and (max-width: 568px) {
+        margin-top: -16vh;
+
+    }
+    @media screen and (min-width: 1024px) and (max-width: 1280px) {
+        margin-top: -15vh;
+
+    }
+
+
 }
 
 
