--- a/src/components/layout/navBar/navBar.module.css
+++ b/src/components/layout/navBar/navBar.module.css
@@ -81,6 +81,8 @@
         background: black;
         text-align: center;
         font-size: 1.1em;
+        pointer-events: none;
+        opacity: 0;
     }
     @media screen and (min-width: 375px) and (max-width: 568px) {
         flex-direction: column;
@@ -94,15 +96,21 @@
         gap: 1em;
         text-align: center;
         font-size: 1.5em;
+        pointer-events: none;
+        opacity: 0;
     }
 
 }
+
+
 
 .menu.open {
     @media screen and (max-width: 568px) {
         display: flex;
         top : 0;
         overflow: hidden;
+        pointer-events: auto;   /* réactive les clics */
+        opacity: 1;
     }
 
 }
