--- a/src/components/process/cardProcess/cardProcess.module.css
+++ b/src/components/process/cardProcess/cardProcess.module.css
@@ -8,7 +8,14 @@
     background-color: var(--blue-coin);
     transition: transform 0.3s ease-in-out;
 
-    @media screen and (max-width: 568px){
+
+    @media screen and (max-width: 375px){
+        min-height: 110vh;
+        width: 90vw;
+        margin : 0;
+
+    }
+    @media screen and (min-width: 375px) and (max-width: 568px){
         min-height: fit-content;
         width: 90vw;
         margin : 0;
