fix: remove overflow after opening menu

--- a/src/components/layout/navBar/navBar.module.css
+++ b/src/components/layout/navBar/navBar.module.css
@@ -108,7 +108,7 @@
         display: flex;
         top : 0;
         overflow: hidden;
-        pointer-events: auto;   /* réactive les clics */
+        pointer-events: auto;
         opacity: 1;
     }
 
