fix: select style with ios

--- a/src/features/contact/component/form/contactForm.module.css
+++ b/src/features/contact/component/form/contactForm.module.css
@@ -147,6 +147,9 @@
     background-color: black;
     color : var(--white-pure);
     font-size: 1.4em;
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 0;
 }
 
 .select:focus {
